# Kafka-tutorial-producer

./: Cargo.toml  README.md  config.yaml
src/: config.rs  main.rs
